# debufrizer

./: CMakeLists.txt  README.md  code.h  code_table.cpp  code_table.h  descriptor.cpp  descriptor.h  descriptor_tree.h  main.cpp  section0.cpp  section0.h  section1.cpp  section1.h  section3and4.cpp  section3and4.h
examples/: .tif  process.sh
examples/bufr/tables/0/local/14/85/0/: element.table  sequence.def
